# media-pilot

./: .dockerignore  .env.example  .gitignore  CONTEXT.md  Dockerfile  LICENSE  README.en.md  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
docs/: account-system-plan.md  api.md  bdmv-movie-ingest-plan.md  content-discovery-plan.md  deployment.md  frontend.md  iteration-manual-metadata-research.md  local-git-workflow.md  postgres-migration-plan.md  sqlite-locking-plan.md
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
tests/: agent_runner_helpers.py  auth_helpers.py  stubs.py  test_accounts.py  test_adult_movie_publish_paths.py  test_adult_movie_safety_boundaries.py  test_agent_background_status.py  test_agent_background_status_api.py  test_agent_decision.py  test_agent_decision_request_repository.py  test_agent_message_repository.py  test_agent_models.py  test_agent_recovery.py  test_agent_reply_language.py  test_agent_run_core.py  test_agent_run_freeform.py  test_agent_run_repository.py  test_agent_run_retry.py  test_agent_run_safety_net.py  test_agent_tool_call_repository.py  test_agent_tools.py  test_agent_workspace_api.py  test_ai_adapter_contract.py  test_ai_adapter_factory.py  test_api_v1.py  test_api_v1_flows.py  test_api_v1_recover_stuck.py  test_app_settings.py  test_app_shared_secrets_fallback.py  test_auth_api.py  test_auth_sessions.py  test_auto_confirm_blocking.py  test_auto_ingest_services.py  test_background_processor.py  test_candidate_access.py  test_candidate_search.py  (+97 more)
(+224 files in other folders)
